--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,63 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+}
+html{
+  scroll-behavior: smooth;
+}
+body {
+  max-width: 100dvw;
+  overflow-x: hidden;
+  margin: 0;
+  font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(72deg, rgb(44, 222, 242) 0.00%, rgb(156, 43, 171) 35.00%, rgb(39, 43, 44) 100.00%);
+}
+h1{
+  font-weight: 700;
+  color: white;
+}
+section{
+  z-index: -999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background:linear-gradient(90deg, #3f51b574, #00bbd462);
+  animation: animate 15s linear infinite;
+}
+section:before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-top: 100vh solid transparent;
+  border-left: 100vh solid #fff;
+  opacity: 0.1;
+}
+section:after{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right : 0;
+  border-top: 100vh solid transparent;
+  border-right: 100vh solid #fff;
+  opacity: 0.1;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@keyframes animate{
+  0%{
+    filter: hue-rotate(0deg);
+  }
+  50%{
+    filter: hue-rotate(360deg);
+  }
+  100%{
+    filter: hue-rotate(0deg);
+  }
 }
